2002-03-04  Philippe Elie  <ph_e@club-internet.fr>

	* util/misc.h: minor comment fix

	* pp/oprofpp_util.cpp: tweak the last commit

2002-03-04  John Levon  <moz@compsoc.man.ac.uk>

	* pp/oprofpp_util.cpp: welcome in the local symbols ...
 
2002-03-03  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.h:
	* pp/opf_container.cpp: samples_files_t::add() add an hint
	  parameter on what information will needed.
	* pp/op_time.cpp:
	* pp/oprofpp.cpp:
	* pp/opf_filter.cpp: use it
	
	* pp/op_time.cpp: when a samples files for one counter
	  does not exist avoid to load it (op_time -l) fix #525237

2002-03-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/Makefile.in: add -pedantic to CXXFLAGS
	* pp/oprofpp.h: replace macro verpbrintf with a function
	* pp/oprofpp_util.cpp: implement it
	* pp/opp_symbol.h:
	* pp/op_time.cpp: fix pedantic warning

	* pp/opevents.cpp:
	* op_user.h: op_get_cpu_nr_counters() new

	* pp/op_time.cpp:
	* pp/opf_container.cpp:
	* pp/opf_filter.cpp:
	* pp/opf_filter.h:
	* pp/opp_symbol.cpp:
	* pp/oprofpp.cpp:
	* pp/oprofpp_util.cpp: remove global var op_nr_counters

2002-03-02  Philippe Elie  <ph_e@club-internet.fr>

	* module/op_syscalls.c: do not pre-allocate some dname
	  hash map entry for common pathname but pre alloc entry
	  zero to reserve it

	* pp/op_time.cpp: add image name to the default output format

	* module/compat22.h: move cacheline_aligned macro to ...
	* module/op_cache.h: this new file
	* module/compat.h: use it
	* module/compat22.h:
	* module/oprofile.c: replace some __cacheline_aligned by
	  __cacheline_aligned_in_smp

2002-03-01  Philippe Elie  <ph_e@club-internet.fr>

	* dae/opd_kernel.c:
	* dae/opd_proc.c: simplify handling of kernel samples

	* pp/opt_time.cpp:
	* pp/opp_symbol.cpp:
	* pp/opp_symbol.h:
	* pp/oprofpp.cpp:
	* pp/oprofpp.h: tidy, gives a negative form to header output
	  format

	* version.h.in: new macro show_version() to output version
	* doc/oprofile.sgml: document it
	* dae/oprofiled.c: